# scipy-india.github.io

./: .gitignore  .lycheeignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  about.html  about.md  blog1.html  blog2.html  blogs.html  blogs.js  coc.html  contact.html  event_details.json  events-loop-html.js  events.js  headerFooterManager.js  index.html  markdown.js  navigation.js  netlify.toml  pyproject.toml  style.css
.github/workflows/: deploy.yml  github-pages-redirect.yml  link-check.yml  pre-commit.yml
_build/html/: .buildinfo  .buildinfo 2  .buildinfo.bak  blog.html  coc.html  contact.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: coc.doctree  contact.doctree  environment.pickle  index.doctree
_build/html/blog/: 2025.html  (+11 more)
blogs/: about.md  about_SciPy_India.md  meetup1_highlights.md
blogs/community-calls/: indiafoss-2025-science-devroom.md  july-2025.md  scipy-india-bangpypers-feb-2026.md
docs/: about.md  coc.md  conf.py  contact.md  index.md  past-editions.md
docs/_extra/: _headers  _redirects  blog.html
docs/_static/: custom.css
docs/_templates/: blog_post_grid_body.html  footer_partners.html  layout.html  partners.html  recent-highlights.html
docs/blog/: 2025-07-26-community-call-1.md  2025-09-21-indiafoss-science-devroom.md  2026-02-21-bangpypers-joint-meetup.md  index.md
docs/events/: index.md
docs/sphinxext/: blog_post_grid.py  events_feed.py  past_editions_list.py
github-pages/: 404.html  index.html
slides/: Config.tex  Main.tex  README.md
(+59 files in other folders)
